# Scoom-Text-Editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  data.txt  main.c  readme.md  script.py  todo.md
include/: buffer.h  config.h  core.h  file.h  highlight.h  inout.h  input.h  objects.h  operations.h  render.h  rows.h  terminal.h
include/dsa/: dlist.h
src/: buffer.c  config.c  core.c  file.c  highlight.c  inout.c  input.c  main.c  operations.c  render.c  rows.c  terminal.c
src/dsa/: dlist.c
